# docs/api/notes/v1/notes.swagger.json
@@ -16,79 +16,6 @@
     "application/json"
   ],
   "paths": {
-    "/api.notes.v1.NoteAPI/GetNote": {
-      "post": {
-        "operationId": "NoteAPI_GetNote",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1NoteResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1NoteRequest"
-            }
-          }
-        ],
-        "tags": [
-          "api.notes.v1.NoteAPI"
-        ]
-      }
-    },
-    "/api.notes.v1.NoteAPI/StreamNotes": {
-      "post": {
-        "operationId": "NoteAPI_StreamNotes",
-        "responses": {
-          "200": {
-            "description": "A successful response.(streaming responses)",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "result": {
-                  "$ref": "#/definitions/v1NoteResponse"
-                },
-                "error": {
-                  "$ref": "#/definitions/rpcStatus"
-                }
-              },
-              "title": "Stream result of v1NoteResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1NoteRequest"
-            }
-          }
-        ],
-        "tags": [
-          "api.notes.v1.NoteAPI"
-        ]
-      }
-    },
     "/api.notes.v1.NoteAPI/StreamNotesBidirectional": {
       "post": {
         "operationId": "NoteAPI_StreamNotesBidirectional",
@@ -155,6 +82,77 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/v1NoteCreateRequest"
+            }
+          }
+        ],
+        "tags": [
+          "api.notes.v1.NoteAPI"
+        ]
+      }
+    },
+    "/api/v1/notes/{id}": {
+      "get": {
+        "operationId": "NoteAPI_GetNote",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1NoteResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "api.notes.v1.NoteAPI"
+        ]
+      }
+    },
+    "/api/v1/stream": {
+      "post": {
+        "operationId": "NoteAPI_StreamNotes",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/v1NoteResponse"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of v1NoteResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1NoteRequest"
             }
           }
         ],
